force-app/main/default/objects/Survey_Available_Option__c/Survey_Available_Option__c.object-meta.xml
<CustomObject>
    <label>Survey Available Option</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Survey Available Options Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Available Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>