force-app/main/default/objects/Survey_Available_Option__c/fields/Number_Of_Answers__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Answers__c</fullName>
    <label>Number_Of_Answers</label>
    <summaryForeignKey>User_Survey_Answers__c.Survey_Available_Option__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>