force-app/main/default/objects/Survey_Available_Option__c/fields/Survey_Option__c.field-meta.xml
<CustomField>
    <fullName>Survey_Option__c</fullName>
    <label>Survey Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>