force-app/main/default/objects/Survey_Available_Option__c/fields/Survey_Question__c.field-meta.xml
<CustomField>
    <fullName>Survey_Question__c</fullName>
    <label>Survey Question</label>
    <referenceTo>Survey_Question__c</referenceTo>
    <relationshipLabel>Survey Available Options</relationshipLabel>
    <relationshipName>Survey_Available_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>